--- a/resources/workbench-deployment.yaml
+++ b/resources/workbench-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: workbench-deployment
   labels:
-    app: nginx
+    app: workbench
 spec:
   replicas: 1
   selector:
-    # Is this sufficient?
     matchLabels:
       app: nginx
   template:
     metadata:
       labels:
-        app: nginx
+        app: workbench
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: workbench
+        image: "jupyter/minimal-notebook"
         ports:
-        - containerPort: 80
+        - containerPort: 8888
+          name: http
