--- a/resources/workbench-deployment.yaml
+++ b/resources/workbench-deployment.yaml
@@ -20,3 +20,10 @@ spec:
         ports:
         - containerPort: 8888
           name: http
+      env:
+        # Using the configmap
+        - name: TEST_CONFIGMAP
+          valueFrom:
+            configMapKeyRef:
+              name: demo-configmap
+              key: foo
